Addresss/Update/Add()Offline/Online

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -13,6 +13,23 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="manifest" href="manifest.webmanifest">
   
+   <!-- ////////// -->
+    
+   <!-- Load Leaflet from CDN
+   <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
+   <script src="https://unpkg.com/leaflet/dist/leaflet-src.js"></script> -->
+
+   <!-- Load Esri Leaflet from CDN -->
+   <!-- <script src="https://unpkg.com/esri-leaflet"></script> -->
+
+   <!-- Esri Leaflet Geocoder -->
+   <!-- <link
+     rel="stylesheet"
+     href="https://unpkg.com/esri-leaflet-geocoder/dist/esri-leaflet-geocoder.css"
+   />
+   <script src="https://unpkg.com/esri-leaflet-geocoder"></script> -->
+ <!-- Load Leaflet from CDN -->
+  <!-- Load Leaflet from CDN -->
 
   <meta name="theme-color" content="#1976d2">
 </head>
